// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup avatar context props should be work 1`] = `
<div class="fect-avatar__group">
  <div class="fect-avatar fect-avatar--stacked fect-avatar--mini fect-avatar--isSquare ">
    <!----><span class="fect-avatar__text">a</span>
  </div>
  <div class="fect-avatar fect-avatar--stacked fect-avatar--mini fect-avatar--isSquare ">
    <!----><span class="fect-avatar__text">b</span>
  </div><span class="fect-avatar__counter">+10</span>
</div>
`;

exports[`AvatarGroup should be work as avatar container 1`] = `
<div class="fect-avatar__group">
  <div class="fect-avatar fect-avatar--stacked fect-avatar--medium ">
    <!----><span class="fect-avatar__text">a</span>
  </div>
  <div class="fect-avatar fect-avatar--stacked fect-avatar--medium ">
    <!----><span class="fect-avatar__text">b</span>
  </div><span class="fect-avatar__counter">+10</span>
</div>
`;
